--- a/docsets/AMCoreAudio.docset/Contents/Info.plist
+++ b/docsets/AMCoreAudio.docset/Contents/Info.plist
@@ -7,7 +7,7 @@
     <key>CFBundleName</key>
       <string>AMCoreAudio</string>
     <key>DocSetPlatformFamily</key>
-      <string>jazzy</string>
+      <string>amcoreaudio</string>
     <key>isDashDocset</key>
       <true/>
     <key>dashIndexFilePath</key>
